# knowledge-archive

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/knowledge_archive/: __init__.py  articles.py  bot.py  config.py  db.py  documents.py  embeddings.py  llm.py  models.py  social.py  storage.py  text.py  video.py
db/: init.sql
