[project]
name = "knowledge-archive"
version = "0.1.0"
description = "Telegram knowledge archive bot with OpenRouter analysis and pgvector storage."
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.8,<4",
  "asyncpg>=0.29,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "python-slugify>=8.0,<9",
  "PyMuPDF>=1.26,<2",
  "PyYAML>=6.0,<7",
  "trafilatura>=2.0,<3",
  "yt-dlp>=2026.1.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5,<1",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
